changing dates and lab

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <td>Reading</td>
             </tr>
             <tr>
-              <td>01/09 Week 1</td>
+              <td>08/22 Week 1</td>
               <td class="alignleft">Class Intro HTML review</td>
               <td>
                 <ol class="alignleft">
@@ -59,12 +59,7 @@
               </td>
             </tr>
             <tr>
-              <td>01/16 Week 2</td>
-              <td class="alignleft">No Class</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>01/23 Week 3</td>
+              <td>08/29 Week 2</td>
               <td class="alignleft">CSS Review, Relative Units</td>
               <td>
                 <ol class="alignleft">
@@ -75,7 +70,7 @@
               </td>
             </tr>
             <tr>
-              <td>01/30 Week 4</td>
+              <td>09/05 Week 3</td>
               <td class="alignleft">JS Review, Responsive Design</td>
               <td>
                 <ol class="alignleft">
@@ -90,7 +85,7 @@
               </td>
             </tr>
             <tr>
-              <td>02/06 Week 5</td>
+              <td>09/12 Week 4</td>
               <td class="alignleft">Touchscreen, and forms</td>
               <td>
                 <ol class="alignleft">
@@ -105,7 +100,7 @@
               </td>
             </tr>
             <tr>
-              <td>02/13 Week 6</td>
+              <td>09/19 Week 5</td>
               <td class="alignleft">Typography</td>
               <td>
                 <ol class="alignleft">
@@ -116,7 +111,7 @@
               </td>
             </tr>
             <tr>
-              <td>02/20 Week 7</td>
+              <td>09/26 Week 6</td>
               <td class="alignleft">Interface Typography</td>
               <td>
                 <ol class="alignleft">
@@ -127,7 +122,7 @@
               </td>
             </tr>
             <tr>
-              <td>02/27 Week 8</td>
+              <td>10/03 Week 7</td>
               <td class="alignleft">Colors</td>
               <td>
                 <ol class="alignleft">
@@ -145,7 +140,7 @@
               </td>
             </tr>
             <tr>
-              <td>03/06 Week 9</td>
+              <td>10/10 Week 8</td>
               <td class="alignleft">Material Design</td>
               <td>
                 <ol class="alignleft">
@@ -159,12 +154,7 @@
               </td>
             </tr>
             <tr>
-              <td>03/13 Week 10</td>
-              <td class="alignleft">NO CLASS</td>
-              <td>Enjoy Spring Break!</td>
-            </tr>
-            <tr>
-              <td>03/20 Week 11</td>
+              <td>10/17 Week 9</td>
               <td class="alignleft">Motion</td>
               <td>
                 <ol class="alignleft">
@@ -173,7 +163,7 @@
               </td>
             </tr>
             <tr>
-              <td>03/27 Week 12</td>
+              <td>10/24 Week 10</td>
               <td class="alignleft">HCI Guidelines, Ethics</td>
               <td>
                 <ol class="alignleft">
@@ -187,7 +177,7 @@
               </td>
             </tr>
             <tr>
-              <td>04/03 Week 13</td>
+              <td>10/31 Week 11</td>
               <td class="alignleft">Usability</td>
               <td>
                 <ol class="alignleft">
@@ -201,7 +191,7 @@
               </td>
             </tr>
             <tr>
-              <td>04/10 Week 14</td>
+              <td>11/07 Week 12</td>
               <td class="alignleft">Usability Testing</td>
               <td>
                 <ol class="alignleft">
@@ -212,7 +202,7 @@
               </td>
             </tr>
             <tr>
-              <td>04/17 Week 15</td>
+              <td>11/14 Week 13</td>
               <td class="alignleft">Emotional Design</td>
               <td>
                 <ol class="alignleft">
@@ -223,7 +213,12 @@
               </td>
             </tr>
             <tr>
-              <td>04/24 Week 16</td>
+              <td>11/21 Week 14</td>
+              <td class="alignleft">NO CLASS</td>
+              <td>Enjoy Thanksgiving Break!</td>
+            </tr>            
+            <tr>
+              <td>11/28 Week 15</td>
               <td class="alignleft">Remote User-Testing</td>
               <td></td>
             </tr>
@@ -242,7 +237,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><a href="https://github.com/dkriegls/itmd-362-spring2018/tree/master/Labs">Labs</a></td>
+              <td><a href="https://github.com/dkriegls/itmd-362-fall2018/tree/master/labs">Labs</a></td>
             </tr>
             <tr>
               <td>01/30</td>
@@ -388,8 +383,6 @@
       <a href="http://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons</a>.
       Source hosted on GitHub. Big thanks to
       <a href="https://basecamp.com">Basecamp</a> and
-      <a href="https://www.addevent.com/">AddEvent</a> for donating resources to further
-      the educational goals of this class.
     </p>
   </footer>
 <!--#page-->
