--- a/syllabus.html
+++ b/syllabus.html
@@ -94,7 +94,7 @@
           <h3>Textbook&#x28;s&#x29;</h3>
           <section id="books">
             <p>
-              The follwing books are required for this course. Retail price tag for the entire course
+              The following books are required for this course. Retail price tag for the entire course
               should be less than $100 and each book should be worthy of a place on your bookshelf or
               electronic device of choice long after the class has ended.
             </p>
@@ -158,7 +158,7 @@
         </section>
         <section id="websites">
         <h3>Course Web Site&#40;s&#41;</h3>
-          <p>https://dkriegls.github.io/itmd-362-spring2018/</p>
+          <p>https://dkriegls.github.io/itmd-362-fall2018/</p>
         </section>
          <section id="blackboard">
           <h3>Blackboard</h3>
@@ -316,8 +316,6 @@
         <a href="http://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons</a>.
         Source hosted on GitHub. Big thanks to
         <a href="https://basecamp.com">Basecamp</a> and
-        <a href="https://www.addevent.com/">AddEvent</a> for donating resources to further
-        the educational goals of this class.
       </p>
     </footer>
   <!--#page-->
