--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
 <head>
-  <title>Lab 3</title>
+  <title>Lab 2</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="screen.css" />
 </head>
 <body>
-
+  <form>
+    <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
