Added a basic label and submit button to test code.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <form>
-  
+    <label for="male"> Phone Number</label>
+    <input type="submit" value="Submit"> 
   </form> 
 </body>
 </html>
