Added the three questions needed for altar

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
   <form>
-    <input type="submit" value="Submit">
+   <div>
+    <label for="male">E-mail Address</label>
+   </div>
+   <div>
+    <label for="male">Phone Number</label>
+   </div>    
+   <div>	
+	<label for="male">Date of Birth</label>
+   <div>    
+	<input type="submit" value="Submit">
   </form>
 </body>
 </html>
