Added the input to the values including their types.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -9,13 +9,16 @@
 <body>
   <form>
    <div>
-    <label for="male">E-mail Address</label>
+    <label for="male">E-mail Address: </label>
+	<input type="email" value="Insert E-mail">
    </div>
    <div>
-    <label for="male">Phone Number</label>
+    <label for="male">Phone Number: </label>
+	<input type="tel" value="XXX-XXX-XXXX">
    </div>    
    <div>	
-	<label for="male">Date of Birth</label>
+	<label for="male">Date of Birth: </label>
+	<input type="date" value="XX/XX/XXXX">
    <div>    
 	<input type="submit" value="Submit">
   </form>
