Set up a label and input for user to enter phone number.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <form>
-    <label for="male"> Phone Number</label>
+    <div>
+      <label for="male"> Phone Number</label>
+      <input type="tel" value="phone number"> 
+    </div> 
     <input type="submit" value="Submit"> 
   </form> 
 </body>
