Change values to placeholders and added name section.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -9,16 +9,20 @@
 <body>
   <form>
    <div>
-    <label for="male">E-mail Address: </label>
-	<input type="email" value="Insert E-mail">
+    <label for="name">Name: </label>
+	<input type="text" placeholder="First Last">
    </div>
    <div>
-    <label for="male">Phone Number: </label>
-	<input type="tel" value="XXX-XXX-XXXX">
+    <label for="e-mail">E-mail Address: </label>
+	<input type="email" placeholder="Insert E-mail">
+   </div>
+   <div>
+    <label for="phone">Phone Number: </label>
+	<input type="tel" placeholder="XXX-XXX-XXXX">
    </div>    
    <div>	
-	<label for="male">Date of Birth: </label>
-	<input type="date" value="XX/XX/XXXX">
+	<label for="date">Date of Birth: </label>
+	<input type="date" value="">
    <div>    
 	<input type="submit" value="Submit">
   </form>
