Setup the labels and unput for name, phone number, etc.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -9,9 +9,25 @@
 <body>
   <form>
     <div>
-      <label for="male"> Phone Number</label>
-      <input type="tel" value="phone number"> 
+      <label for="name"> Name</label>
+      <input type="text" value="Full Name"> 
+    </div>
+    <div>
+      <label for="phone number"> Phone Number</label>
+      <input type="tel" value="(###)-###-####"> 
     </div> 
+    <div>
+      <label for="email"> Email</label>
+      <input type="email" value="Email"> 
+    </div>
+    <div>
+      <label for="birthday"> Birthday</label>
+      <input type="date" value="Birthday"> 
+    </div>
+    <div>
+      <label for="snn"> SNN (Optional)</label>
+      <input type="password" value="###-##-####"> 
+    </div>
     <input type="submit" value="Submit"> 
   </form> 
 </body>
