Replace the value for placeholder command

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -10,23 +10,23 @@
   <form>
     <div>
       <label for="name"> Name</label>
-      <input type="text" value="Full Name"> 
+      <input type="text" placeholder="Full Name"> 
     </div>
     <div>
       <label for="phone number"> Phone Number</label>
-      <input type="tel" value="(###)-###-####"> 
+      <input type="tel" placeholder="(###)-###-####"> 
     </div> 
     <div>
       <label for="email"> Email</label>
-      <input type="email" value="Email"> 
+      <input type="email" placeholder="Email"> 
     </div>
     <div>
       <label for="birthday"> Birthday</label>
-      <input type="date" value="Birthday"> 
+      <input type="date" placeholder="Birthday"> 
     </div>
     <div>
       <label for="snn"> SNN (Optional)</label>
-      <input type="password" value="###-##-####"> 
+      <input type="password" placeholder="###-##-####"> 
     </div>
     <input type="submit" value="Submit"> 
   </form> 
