changed the text in the placeolder for the email

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -18,7 +18,7 @@
     </div> 
     <div>
       <label for="email"> Email</label>
-      <input type="email" placeholder="Email"> 
+      <input type="email" placeholder="JDoe@missing.com"> 
     </div>
     <div>
       <label for="birthday"> Birthday</label>
