Added legend and fixed the styling sheet.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--Amairani Lopez-->
+<!--Professor Daniel Krieglstein-->
+<!--9/17/2018-->
 <html lang="en" class="nojs">
 <head>
   <title>Lab 2</title>
@@ -7,24 +10,27 @@
   <link rel="stylesheet" media="screen" href="screen.css" />
 </head>
 <body>
-  <form>
-   <div>
-    <label for="name">Name: </label>
-	<input type="text" placeholder="First Last">
-   </div>
-   <div>
-    <label for="e-mail">E-mail Address: </label>
-	<input type="email" placeholder="Insert E-mail">
-   </div>
-   <div>
-    <label for="phone">Phone Number: </label>
-	<input type="tel" placeholder="XXX-XXX-XXXX">
-   </div>    
-   <div>	
-	<label for="date">Date of Birth: </label>
-	<input type="date" value="">
-   <div>    
-	<input type="submit" value="Submit">
-  </form>
+	<fieldset>
+	 <legend>About You</legend>
+	  <form>
+	   <div>
+		<label for="name">Name: </label>
+		<input type="text" placeholder="First Last">
+	   </div>
+	   <div>
+		<label for="e-mail">E-mail Address: </label>
+		<input type="email" placeholder="Insert E-mail">
+	   </div>
+	   <div>
+		<label for="phone">Phone Number: </label>
+		<input type="tel" placeholder="XXX-XXX-XXXX">
+	   </div>    
+	   <div>	
+		<label for="date">Date of Birth: </label>
+		<input type="date" value="">
+	   <div>    
+		<input type="submit" value="Submit">
+	  </form>
+	</fieldset>  
 </body>
 </html>
