changed the text input for name to first and last in seperate inputs.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -10,7 +10,10 @@
   <form>
     <div>
       <label for="name"> Name</label>
-      <input type="text" placeholder="Full Name"> 
+      <input type="text" placeholder="First"> 
+    </div>
+    <div>
+      <input type="text" placeholder="Last"> 
     </div>
     <div>
       <label for="phone number"> Phone Number</label>
