made the label into a paragraph to centerize later in the css.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -9,26 +9,26 @@
 <body>
   <form>
     <div>
-      <label for="name"> Name</label>
+      <p> <label for="name"> Name</label> </p> 
       <input type="text" placeholder="First"> 
     </div>
     <div>
       <input type="text" placeholder="Last"> 
     </div>
     <div>
-      <label for="phone number"> Phone Number</label>
+      <p> <label for="phone number"> Phone Number</label> </p>
       <input type="tel" placeholder="(###)-###-####"> 
     </div> 
     <div>
-      <label for="email"> Email</label>
+      <p> <label for="email"> Email</label> </p> 
       <input type="email" placeholder="JDoe@missing.com"> 
     </div>
     <div>
-      <label for="birthday"> Birthday</label>
+      <p> <label for="birthday"> Birthday</label> </p> 
       <input type="date" placeholder="Birthday"> 
     </div>
     <div>
-      <label for="snn"> SNN (Optional)</label>
+      <p> <label for="snn"> SNN (Optional)</label> </p> 
       <input type="password" placeholder="###-##-####"> 
     </div>
     <input type="submit" value="Submit"> 
