--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -7,28 +7,28 @@
   <title>Lab 2</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="screen.css" />
+  <link rel="stylesheet" media="screen" href="style/screen.css" />
 </head>
 <body>
 	<fieldset>
 	 <legend>About You</legend>
 	  <form>
 	   <div>
-		<label for="name">Name: </label>
+		<p><label for="name">Name: </label></p>
 		<input type="text" placeholder="First Last">
-	   </div>
+	   </div class="row">
 	   <div>
-		<label for="e-mail">E-mail Address: </label>
+		<p><label for="e-mail">E-mail Address: </label></p>
 		<input type="email" placeholder="Insert E-mail">
 	   </div>
 	   <div>
-		<label for="phone">Phone Number: </label>
+		<p><label for="phone">Phone Number: </label></p>
 		<input type="tel" placeholder="XXX-XXX-XXXX">
 	   </div>    
 	   <div>	
-		<label for="date">Date of Birth: </label>
+		<p><label for="date">Date of Birth: </label></p>
 		<input type="date" value="">
-	   <div>    
+	   </div>    
 		<input type="submit" value="Submit">
 	  </form>
 	</fieldset>  
