made submit into button.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -16,7 +16,7 @@
 	   <div>
 		<p><label for="name">Name: </label></p>
 		<input type="text" placeholder="First Last">
-	   </div class="row">
+	   </div>
 	   <div>
 		<p><label for="e-mail">E-mail Address: </label></p>
 		<input type="email" placeholder="Insert E-mail">
@@ -29,7 +29,7 @@
 		<p><label for="date">Date of Birth: </label></p>
 		<input type="date" value="">
 	   </div>    
-		<input type="submit" value="Submit">
+        <button class="button"> SUBMIT </button>
 	  </form>
 	</fieldset>  
 </body>
