Put HTML thorugh validator and fixed the errors given

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -14,20 +14,20 @@
 	 <legend>About You</legend>
 	  <form>
 	   <div>
-		<p><label for="name">Name: </label></p>
+		<p><label class="name">Name: </label></p>
 		<input type="text" placeholder="First Last">
 	   </div>
 	   <div>
-		<p><label for="e-mail">E-mail Address: </label></p>
+		<p><label class="e-mail">E-mail Address: </label></p>
 		<input type="email" placeholder="Insert E-mail">
 	   </div>
 	   <div>
-		<p><label for="phone">Phone Number: </label></p>
+		<p><label class="phone">Phone Number: </label></p>
 		<input type="tel" placeholder="XXX-XXX-XXXX">
 	   </div>    
 	   <div>	
-		<p><label for="date">Date of Birth: </label></p>
-		<input type="date" value="">
+		<p><label class="date">Date of Birth: </label></p>
+		<input type="text" placeholder="MM/DD/YYYY">
 	   </div>    
         <button class="button"> SUBMIT </button>
 	  </form>
