I have given the names to the labels and set their value.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -9,13 +9,13 @@
 <body>
   <form> 
     <div> 
-      <label> </label>
+      <label for="name">Name</label>
     </div> 
     <div>
-      <label> </label>
+      <label for="phone number">Phone Number</label>
     </div>
     <div>
-      <label> </label>
+      <label for="e-mail">E-mail</label>
     </div>
   </form> 
 </body>
