I have added a button to submit the information. I have also set the input for the first label to test out.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -9,14 +9,16 @@
 <body>
   <form> 
     <div> 
-      <label for="name">Name</label>
+      <label for = "name"> Name </label>
+      <input type = "text" value = "First & Last Name">
     </div> 
     <div>
-      <label for="phone number">Phone Number</label>
+      <label for = "phone number"> Phone Number </label>
     </div>
     <div>
-      <label for="e-mail">E-mail</label>
+      <label for = "e-mail"> E-mail </label>
     </div>
+    <input type = "submit" value = "Submit"> 
   </form> 
 </body>
 </html>
