--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -14,9 +14,11 @@
     </div> 
     <div>
       <label for = "phone number"> Phone Number </label>
+      <input type = "tel" value = "xxx-xxx-xxxx">
     </div>
     <div>
       <label for = "e-mail"> E-mail </label>
+      <input type = "email" value = "name@.com">
     </div>
     <input type = "submit" value = "Submit"> 
   </form> 
