I have added a header to the index file.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" media="screen" href="screen.css" />
 </head>
 <body>
+  <h1> Self Information Form </h1>
   <form> 
     <div> 
       <label for = "name"> Name </label>
