got rid of white space between paragraph and input and changed for to class label.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -9,26 +9,26 @@
 <body>
   <form>
     <div>
-      <p> <label for="name"> Name</label> </p> 
+      <p><label class="name"> Name</label></p> 
       <input type="text" placeholder="First"> 
     </div>
     <div>
       <input type="text" placeholder="Last"> 
     </div>
     <div>
-      <p> <label for="phone number"> Phone Number</label> </p>
+      <p><label class="phone number"> Phone Number</label></p>
       <input type="tel" placeholder="(###)-###-####"> 
     </div> 
     <div>
-      <p> <label for="email"> Email</label> </p> 
+      <p><label class="email"> Email</label></p> 
       <input type="email" placeholder="JDoe@missing.com"> 
     </div>
     <div>
-      <p> <label for="birthday"> Birthday</label> </p> 
-      <input type="date" placeholder="Birthday"> 
+      <p><label class="birthday"> Birthday</label></p> 
+      <input type="text" placeholder="mm/dd/yy"> 
     </div>
     <div>
-      <p> <label for="snn"> SNN (Optional)</label> </p> 
+      <p><label class="snn"> SNN (Optional)</label></p> 
       <input type="password" placeholder="###-##-####"> 
     </div>
     <input type="submit" value="Submit">
