I have changed the for into classes to give appropriate value.

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="nojs">
+<html lang="en">
 <head>
   <title>Lab 2</title>
   <meta charset="utf-8" />
@@ -10,15 +10,15 @@
   <h1> Self Information Form </h1>
   <form> 
     <div> 
-      <label for = "name"> Name </label>
+      <label class = "name"> Name </label>
       <input type = "text" value = "First & Last Name">
     </div> 
     <div>
-      <label for = "phone number"> Phone Number </label>
+      <label class = "phone number"> Phone Number </label>
       <input type = "tel" value = "xxx-xxx-xxxx">
     </div>
     <div>
-      <label for = "e-mail"> E-mail </label>
+      <label class = "e-mail"> E-mail </label>
       <input type = "email" value = "name@.com">
     </div>
     <input type = "submit" value = "Submit"> 
